# shitchord

./: Cargo.toml
src/: main.rs
src/chord/: guid.rs  mod.rs
src/chord/node/: mod.rs
